xlib/shm: Populate send_event and serial

Hopefully this random choice is more meaningful than random junk.

Bugzilla; https://bugs.freedesktop.org/show_bug.cgi?id=58672
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>